refactor: clear fields that duplicate request and proto in handler
- rename the message name in proto
