# internal/app/api/v1/greet/greet_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.2.0
-// - protoc             v3.15.5
+// - protoc             v3.19.1
 // source: greet/greet.proto
 
 package greet
@@ -22,8 +22,7 @@ const _ = grpc.SupportPackageIsVersion7
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type GreetClient interface {
-	// Sends a greeting
-	Hello(ctx context.Context, in *HelloRequest, opts ...grpc.CallOption) (*HelloReply, error)
+	Hello(ctx context.Context, in *HelloRequest, opts ...grpc.CallOption) (*HelloResponse, error)
 }
 
 type greetClient struct {
@@ -34,8 +33,8 @@ func NewGreetClient(cc grpc.ClientConnInterface) GreetClient {
 	return &greetClient{cc}
 }
 
-func (c *greetClient) Hello(ctx context.Context, in *HelloRequest, opts ...grpc.CallOption) (*HelloReply, error) {
-	out := new(HelloReply)
+func (c *greetClient) Hello(ctx context.Context, in *HelloRequest, opts ...grpc.CallOption) (*HelloResponse, error) {
+	out := new(HelloResponse)
 	err := c.cc.Invoke(ctx, "/internal.app.api.v1.greet.Greet/Hello", in, out, opts...)
 	if err != nil {
 		return nil, err
@@ -47,8 +46,7 @@ func (c *greetClient) Hello(ctx context.Context, in *HelloRequest, opts ...grpc.
 // All implementations must embed UnimplementedGreetServer
 // for forward compatibility
 type GreetServer interface {
-	// Sends a greeting
-	Hello(context.Context, *HelloRequest) (*HelloReply, error)
+	Hello(context.Context, *HelloRequest) (*HelloResponse, error)
 	mustEmbedUnimplementedGreetServer()
 }
 
@@ -56,7 +54,7 @@ type GreetServer interface {
 type UnimplementedGreetServer struct {
 }
 
-func (UnimplementedGreetServer) Hello(context.Context, *HelloRequest) (*HelloReply, error) {
+func (UnimplementedGreetServer) Hello(context.Context, *HelloRequest) (*HelloResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Hello not implemented")
 }
 func (UnimplementedGreetServer) mustEmbedUnimplementedGreetServer() {}
