# internal/app/transport/http/handler/docs/swagger.json
@@ -56,7 +56,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/greet.HelloReply"
+                                            "$ref": "#/definitions/greet.HelloResponse"
                                         }
                                     }
                                 }
@@ -182,7 +182,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UpdateReq"
+                            "$ref": "#/definitions/user.UpdateRequest"
                         }
                     }
                 ],
@@ -251,7 +251,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.CreateReq"
+                            "$ref": "#/definitions/user.CreateRequest"
                         }
                     }
                 ],
@@ -337,7 +337,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/user.DetailReply"
+                                            "$ref": "#/definitions/user.DetailResponse"
                                         }
                                     }
                                 }
@@ -485,7 +485,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/user.ListReply"
+                                            "$ref": "#/definitions/user.ListResponse"
                                         }
                                     }
                                 }
@@ -626,7 +626,7 @@
                 }
             }
         },
-        "greet.HelloReply": {
+        "greet.HelloResponse": {
             "type": "object",
             "properties": {
                 "msg": {
@@ -635,7 +635,7 @@
                 }
             }
         },
-        "user.CreateReq": {
+        "user.CreateRequest": {
             "type": "object",
             "required": [
                 "name",
@@ -643,21 +643,21 @@
             ],
             "properties": {
                 "age": {
-                    "description": "年龄",
+                    "description": "@gotags: json:\"age\" binding:\"min=1\"",
                     "type": "integer",
                     "minimum": 1
                 },
                 "name": {
-                    "description": "名称",
+                    "description": "@gotags: json:\"name\" binding:\"required\"",
                     "type": "string"
                 },
                 "phone": {
-                    "description": "电话",
+                    "description": "@gotags: json:\"phone\" binding:\"required,phone\"",
                     "type": "string"
                 }
             }
         },
-        "user.DetailReply": {
+        "user.DetailResponse": {
             "type": "object",
             "properties": {
                 "age": {
@@ -678,40 +678,40 @@
                 }
             }
         },
-        "user.ListReply": {
+        "user.ListItem": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "description": "@gotags: json:\"age\"",
+                    "type": "integer"
+                },
+                "id": {
+                    "description": "@gotags: json:\"id\"",
+                    "type": "integer"
+                },
+                "name": {
+                    "description": "@gotags: json:\"name\"",
+                    "type": "string"
+                },
+                "phone": {
+                    "description": "@gotags: json:\"phone\"",
+                    "type": "string"
+                }
+            }
+        },
+        "user.ListResponse": {
             "type": "object",
             "properties": {
                 "items": {
                     "description": "@gotags: json:\"items\"",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/user.ListReply_Item"
+                        "$ref": "#/definitions/user.ListItem"
                     }
                 }
             }
         },
-        "user.ListReply_Item": {
-            "type": "object",
-            "properties": {
-                "age": {
-                    "description": "@gotags: json:\"age\"",
-                    "type": "integer"
-                },
-                "id": {
-                    "description": "@gotags: json:\"id\"",
-                    "type": "integer"
-                },
-                "name": {
-                    "description": "@gotags: json:\"name\"",
-                    "type": "string"
-                },
-                "phone": {
-                    "description": "@gotags: json:\"phone\"",
-                    "type": "string"
-                }
-            }
-        },
-        "user.UpdateReq": {
+        "user.UpdateRequest": {
             "type": "object",
             "required": [
                 "id",
@@ -720,19 +720,20 @@
             ],
             "properties": {
                 "age": {
-                    "description": "年龄",
+                    "description": "@gotags: json:\"age\" binding:\"min=1\"",
                     "type": "integer",
                     "minimum": 1
                 },
                 "id": {
+                    "description": "@gotags: json:\"id\" binding:\"required\"",
                     "type": "integer"
                 },
                 "name": {
-                    "description": "名称",
+                    "description": "@gotags: json:\"name\" binding:\"required\"",
                     "type": "string"
                 },
                 "phone": {
-                    "description": "电话",
+                    "description": "@gotags: json:\"phone\" binding:\"required,phone\"",
                     "type": "string"
                 }
             }
