# internal/app/transport/http/handler/v1/user/detail.go
@@ -2,19 +2,18 @@ package user
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/jinzhu/copier"
 	pb "go-scaffold/internal/app/api/v1/user"
 	"go-scaffold/internal/app/pkg/responsex"
 	"go-scaffold/internal/app/transport/http/pkg/bindx"
 )
 
 type DetailReq struct {
-	Id uint `uri:"id" binding:"required"` // 用户 ID
+	*pb.DetailRequest
 }
 
-func (DetailReq) ErrorMessage() map[string]string {
+func (DetailReq) Message() map[string]string {
 	return map[string]string{
-		"ID.required": "用户 ID 不能为空",
+		"DetailRequest.ID.required": "用户 ID 不能为空",
 	}
 }
 
@@ -25,14 +24,14 @@ func (DetailReq) ErrorMessage() map[string]string {
 // @Tags         用户
 // @Accept       plain
 // @Produce      json
-// @Param        id   path      integer                               true  "用户 ID"  format(uint)  minimum(1)
-// @Success      200  {object}  example.Success{data=pb.DetailReply}  "成功响应"
-// @Failure      500  {object}  example.ServerError                   "服务器出错"
-// @Failure      400  {object}  example.ClientError                   "客户端请求错误（code 类型应为 int，string 仅为了表达多个错误码）"
-// @Failure      401  {object}  example.Unauthorized                  "登陆失效"
-// @Failure      403  {object}  example.PermissionDenied              "没有权限"
-// @Failure      404  {object}  example.ResourceNotFound              "资源不存在"
-// @Failure      429  {object}  example.TooManyRequest                "请求过于频繁"
+// @Param        id   path      integer                                  true  "用户 ID"  format(uint)  minimum(1)
+// @Success      200  {object}  example.Success{data=pb.DetailResponse}  "成功响应"
+// @Failure      500  {object}  example.ServerError                      "服务器出错"
+// @Failure      400  {object}  example.ClientError                      "客户端请求错误（code 类型应为 int，string 仅为了表达多个错误码）"
+// @Failure      401  {object}  example.Unauthorized                     "登陆失效"
+// @Failure      403  {object}  example.PermissionDenied                 "没有权限"
+// @Failure      404  {object}  example.ResourceNotFound                 "资源不存在"
+// @Failure      429  {object}  example.TooManyRequest                   "请求过于频繁"
 func (h *Handler) Detail(ctx *gin.Context) {
 	req := new(DetailReq)
 	if err := bindx.ShouldBindUri(ctx, req); err != nil {
@@ -40,14 +39,7 @@ func (h *Handler) Detail(ctx *gin.Context) {
 		return
 	}
 
-	param := new(pb.DetailRequest)
-	if err := copier.Copy(param, req); err != nil {
-		h.logger.Error(err.Error())
-		responsex.ServerError(ctx)
-		return
-	}
-
-	ret, err := h.service.Detail(ctx.Request.Context(), param)
+	ret, err := h.service.Detail(ctx.Request.Context(), req.DetailRequest)
 	if err != nil {
 		responsex.ServerError(ctx, responsex.WithMsg(err.Error()))
 		return
